# AdventOfCode

historic/2017/: 01-kws.ipynb  02-kws.ipynb  03-kws.ipynb
solutions/2015/kws/: pyproject.toml
solutions/2015/kws/aoc_2015_kws/: cli.py  config.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  setup.py  setup_templates.yaml
solutions/2015/kws/tests/: test_day01.py  test_day05.py
solutions/2022/kws/: pyproject.toml
solutions/2022/kws/aoc_2022_kws/: day_19.py
solutions/2022/kws/tests/: test_day19.py
solutions/2024/kws/aoc_2024_kws/: day_19.py  day_20.py
solutions/2025/kws/: pyproject.toml
solutions/2025/kws/aoc_2025_kws/: cli.py  day_01.py  day_02.py  day_03.py  setup.py
solutions/2025/kws/tests/: test_day02.py
