[tool.poetry]
name = "aoc-2015-kws"
version = "0.1.0"
description = "Advent of Code 2015"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aoc_2015_kws"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"
usersettings = "^1.1.5"
click = "^8.1.3"
rich = "^12.6.0"
advent-of-code-data = "^1.3.2"
trimesh = {extras = ["easy"], version = "^3.17.1"}
jupyterlab = "^3.5.1"
pyglet = "<2"
sympy = "^1.11.1"
frozendict = "^2.3.4"
browser-cookie3 = "^0.16.5"
tqdm = "^4.64.1"

[tool.poetry.scripts]
aoc15 = "aoc_2015_kws.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
